# microcnn

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: lenet_mnist.rs
result/: lenet_mnist
src/: lenet.rs  lib.rs  main.rs  mnist.rs  tensor.rs  tensor_i4.rs
src/arc/: lenet.rs  mod.rs  quantization.rs
src/conv/: fft.rs  im2col.rs  mod.rs  naive.rs  simd.rs  winograd.rs
src/loader/: mnist.rs  mod.rs
src/metrics/: benchmark.rs
src/network/: layers.rs  layers_i4.rs  layers_i8.rs  mod.rs
src/tensor/: mod.rs  tensor.rs  tensor_i4.rs  tensor_i8.rs
tests/: conv_algorithms_test.rs  fusion_test.rs  network_test.rs  quantization_test.rs  simd_test.rs  tensor_test.rs
