[package]
name = "microcnn"
version = "0.1.3"
edition = "2021"
authors = ["Fauzi Sholichin"]
license = "MIT"
description = "A minimal CNN framework in Rust with Quantization"
repository = "https://github.com/fauzisho/microcnn"
keywords = ["cnn", "neural-network", "quantization", "deep-learning"]
categories = ["science", "algorithms"]
exclude = ["data/*", ".idea/*", "result/*"]

[features]
default = ["std", "simd"]
std = ["flate2"]
simd = []
mnist_pre_pad = []

[dependencies]
flate2 = { version = "1", optional = true }
libm = "0.2"
